RESOLVED FIXED20034
[GTK] Invalid vim modeline in WebCore/plugins/gtk/gtk2xtbin.h (with patch)
https://bugs.webkit.org/show_bug.cgi?id=20034
Summary [GTK] Invalid vim modeline in WebCore/plugins/gtk/gtk2xtbin.h (with patch)
Wouter Bolsterlee
Reported 2008-07-14 16:36:26 PDT
The vim modeline in WebCore/plugins/gtk/gtk2xtbin.h is malformed, causing an error when this file is opened in Vim. (I'm atrevision 35167)
Attachments
Fix malformed Vim modeline (939 bytes, patch)
2008-07-14 16:40 PDT, Wouter Bolsterlee
eric: review+
Wouter Bolsterlee
Comment 1 2008-07-14 16:40:15 PDT
Created attachment 22273 [details] Fix malformed Vim modeline
Eric Seidel (no email)
Comment 2 2008-08-02 01:12:15 PDT
Comment on attachment 22273 [details] Fix malformed Vim modeline Looks sane enough. Seems we should have a script to add WebKit-style compatible mode-lines to all files if we're going to use them. It's silly to go through and fix each one by hand.
Jan Alonzo
Comment 3 2008-08-02 02:41:21 PDT
landed in r35526
Wouter Bolsterlee
Comment 4 2008-08-02 04:29:19 PDT
(In reply to comment #2) > Seems we should have a script to add WebKit-style compatible mode-lines to all > files if we're going to use them. It's silly to go through and fix each one by > hand. Perhaps a sample Vim configuration file snippet can be placed somewhere in the WebKit tree. Some comments can be added to tell people how to use it, e.g. tell them to place something like this in their ~/.vimrc: autocmd BufReadPost /path/to/your/webkit/tree/* source /patch/to/your/webkit/tree/webkit.vim Anyway, nothing major, so leaving this report RESOLVED FIXED.
Note You need to log in before you can comment on or make changes to this bug.