2008-08-02  Wouter Bolsterlee  <wbolster@svn.gnome.org>

Reviewed by Eric Seidel.

        * plugins/gtk/gtk2xtbin.h:

        https://bugs.webkit.org/show_bug.cgi?id=20034
        Fix malformed Vim modeline.

git-svn-id: svn://svn.chromium.org/blink/trunk@35526 bbb929c8-8fbe-4397-9dbb-9b2b20218538